Fixes layout issues

--- a/christmas-card.css
+++ b/christmas-card.css
@@ -121,7 +121,6 @@ h2 {
   left: 1000px;
   border-radius: 16px;
   border: 2px solid #04aa6d;
-  position: relative
 }
 
 #pause {
